--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 //Helpers
-@import './Helpers/variables';
-@import './Helpers/mixin';
+@import './Helper/variables';
+@import './Helper/mixxin';
 
 //Vendors
 
