--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -3,6 +3,7 @@
 
 
 .myNavBar{
+    box-shadow: 0 0 1px 1px rgba(20, 23, 28, 0.1), 0 3px 1px 0 rgba(20, 23, 28, 0.1);
     padding: .5rem 1rem;
     .myNavBar__left{
         align-items: center;
@@ -76,8 +77,59 @@
             justify-content: space-between;
             align-items: center;
             .nav-item{
+                padding: $pd-2 + 2 $pd-2;
+                border-radius: $border-radius;
+                position: relative;
                 .nav-link{
                     @include styleText($color-black-light,$fs-1,$fw-0);
+                }
+                &:hover{
+                    background-color:$color-gray-1 ;
+                    .overplay{
+                        display: block;
+                    }
+                }
+                .overplay{
+                    display: none;
+                    background-color: $color-white-0;
+                    width: 330px;
+                    padding: $pd-3;
+                    text-align: center;
+                    position:absolute;
+                    right: 0;
+                    top: 57px;
+                    border-top: 1px solid $color-gray-1;
+                    box-shadow: 0 4px 16px $color-black-1;
+                    a{
+                        text-decoration: none;
+                    }
+                    &::before{
+                        content: '' ;
+                        width: 15px;
+                        height: 15px;
+                        background: $color-white-0;
+                        display: block;
+                        border-top: 1px solid $color-gray-1;
+                        border-left: 1px solid $color-gray-1;
+                        position: absolute;
+                        top: -7px;
+                        right: 10%;
+                        transform: rotate(45deg);
+                    }
+                }
+            }
+            .myNavBar__card{
+                width: 50px;
+                height: 50px;
+                border-radius: 50% ;
+                line-height: 20px;
+                .nav-link{
+                    font-size: $fs-3 + 2 ;
+                }
+            }
+            .myNavBar__buttons{
+                &:hover{
+                    background-color: transparent;
                 }
             }
         }
