--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 //Helpers
 @import './Helper/variables';
 @import './Helper/mixxin';
+@import './Base/extend';
 
 //Vendors
 
@@ -14,6 +15,7 @@
 
 //Components
 @import './Components/button';
+@import './Components/cover';
 
 //Pages
 @import './Pages/home';
