change local url

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ body {
 }
 
 .cover {
-  background-image: url(./../../img/cover.jpg);
+  background-image: url(./../img/cover.jpg);
   height: 500px;
   position: relative;
 }
