--- a/sass/Components/_cover.scss
+++ b/sass/Components/_cover.scss
@@ -1,13 +1,14 @@
 .cover{
-    background-image: url(./../img/cover.jpg);
+    background-image: url('../img/cover.jpg');
     @extend %backgroundImg;
+    // @extend .backgroundImg;
     height: 500px;
     position: relative;
     .cover__content{
-        max-width: 500px;
+        max-width: 500px; 
         position: absolute;
-        top: 50%;
-        left: 12%;
+        top:50%;
+        left:12%;
         transform: translateY(-50%);
         h1{
             @include styleText($color-white-0,$fs-2,$fw-2);
@@ -15,6 +16,15 @@
         p{
             @include styleText($color-white-0,$fs-3,$fw-0);
         }
-
+        .cover__form{
+            @include styleFormSearch($color-white-0,$color-white-0,$color-white-0,$color-black-light);
+        }
     }
-}
+
+    @include responsive("small"){
+        .cover__content{
+            max-width: 400px; 
+            left: 10%;
+        }
+    }
+} 
