--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 //Helpers
-@import './Helper/variables';
-@import './Helper/mixxin';
-@import './Base/extend';
+@import './Helpers/variables';
+@import './Helpers/mixin';
+@import './Helpers/extend';
 
 //Vendors
 
@@ -12,13 +12,35 @@
 //Layouts
 @import './Layouts/header';
 @import './Layouts/footer';
+@import './Layouts/intro';
+@import './Layouts/courses';
+@import './Layouts/viewing';
+@import './Layouts/banner';
+@import './Layouts/categories';
+@import './Layouts/students';
+@import './Layouts/partners';
+@import './Layouts/jobs';
+@import './Layouts/sidebarMini';
+
 
 //Components
 @import './Components/button';
 @import './Components/cover';
+@import './Components/card';
+
 
 //Pages
 @import './Pages/home';
 
-//theme
-
+//Theme
+@import './Theme/dark/resetDark';
+@import './Theme/dark/sidebarMiniDark';
+@import './Theme/dark/headerDark';
+@import './Theme/dark/coursesDark';
+@import './Theme/dark/categoriesDark';
+@import './Theme/dark/studentsDark';
+@import './Theme/dark/partnersDark';
+@import './Theme/dark/jobsDark';
+@import './Theme/dark/footerDark';
+@import './Theme/dark/buttonDark';
+@import './Theme/dark/cardDark';
