--- a/sass/Components/_cover.scss
+++ b/sass/Components/_cover.scss
@@ -17,14 +17,7 @@
             @include styleText($color-white-0,$fs-3,$fw-0);
         }
         .cover__form{
-            @include styleFormSearch($color-white-0,$color-white-0,$color-white-0,$color-black-light);
-        }
-    }
-
-    @include responsive("small"){
-        .cover__content{
-            max-width: 400px; 
-            left: 10%;
+            @include styleFormSearch($color-white-0,$color-white-0,$color-white-0);
         }
     }
 } 
